--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -184,7 +185,6 @@ Phone: (11) 9.9027-6767<br>
 E-mail:contato@makainutri.com.br<br>
 
 <h3>Redes Sociais - Makai Nutri</h3>
-<p>
 <p><a href="https://www.youtube.com/channel/UCqdp4tBgur9fouch5P1vTZQ">YouTube</a></p>
 <p><a href="https://makaisuplementosalimentares.blogspot.com/">Blogger</a></p>
 <p><a href="https://makaisuplementosalimentares.wordpress.com/">WordPress.com</a></p>
@@ -222,7 +222,7 @@ E-mail:contato@makainutri.com.br<br>
 <p><a href="https://disqus.com/by/makainutri/">Disqus</a></p>
 <p><a href="https://www.flickr.com/people/makainutri/">Flickr</a></p>
 <p><a href="https://makainutri.carrd.co/">carrd.co</a></p>
-</p>
+<p><a href="https://weheartit.com/makainutri">Weheart</a></p>
 <br>
 <b>GOOGLE DYNAMIC LINKS</b>
 <p><a href="https://makainutri.page.link/Youtube">YouTube</a></p>
@@ -263,10 +263,15 @@ E-mail:contato@makainutri.com.br<br>
 <p><a href="https://makainutri.page.link/Disqus">Disqus</a></p>
 <p><a href="https://makainutri.page.link/Flickr">Flickr</a></p>
 <p><a href="https://makainutri.page.link/Carrd-co">carrd.co</a></p>
+<p><a href="https://makainutri.page.link/we-heart-it">Weheart</a></p>
 
 <p><a href="https://www.youtube.com/channel/UCqdp4tBgur9fouch5P1vTZQ">Inscreva-se em nosso canal no Youtube</a></p>
 
 <br>
+<p>Veja com seus próprios olhos todos os resultados que o Google devolve se você pesquisa por nossa marca ou pelo nosso dominio web. Nosso objetivo é oferecer os melhores suplementos vitamínicos barato e de ótima qualidade.
+    <p>
+    <iframe src="https://web.archive.org/web/20211104134444/https://www.google.com/search?q=makai+nutri&oq=makai&aqs=chrome.0.69i59j69i57j35i39j46i175i199i433i512j46i175i199i512j69i60l3.2609j0j7&sourceid=chrome&ie=UTF-8" width="900" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </p>
 <br>
 <iframe src="https://web.archive.org/web/20210522202735/https://www.youtube.com/channel/UCqdp4tBgur9fouch5P1vTZQ" width="900" height="450"></iframe>
 <br>
@@ -280,6 +285,7 @@ E-mail:contato@makainutri.com.br<br>
 <iframe src="https://web.archive.org/web/20210522201331/https://makai.blob.core.windows.net/makainutri/index.html" width="900" height="450"></iframe>
 <br>
 <p>
+    Os melhores suplementos vitamínicos com laudos originais além de um suporte personalizado. Veja nossas mídias no g.sites
 <iframe src="https://web.archive.org/web/20210522201446/https://sites.google.com/view/makainutri/home" width="900" height="450"></iframe>
 </p>
 <br>
@@ -289,13 +295,29 @@ E-mail:contato@makainutri.com.br<br>
 <iframe src="http://makainutri.com.br.s3-website-sa-east-1.amazonaws.com/" width="900" height="450" frameborder="0" style="border:0" allowfullscreen></iframe><br>
 <iframe src="https://makainutri.xyz/index.html" width="900" height="450" frameborder="0" style="border:0" allowfullscreen></iframe><br>
 <iframe src="https://storage.googleapis.com/makai-nutri/index.html" width="900" height="450" frameborder="0" style="border:0" allowfullscreen></iframe><br>
-
+<iframe src="https://makai-nutri.netlify.app/" width="900" height="450" frameborder="0" style="border:0" allowfullscreen></iframe><br>
+<iframe src="https://github.com/makainutri/suplementos-e-vitaminas" width="900" height="450" frameborder="0" style="border:0" allowfullscreen></iframe><br>
+<iframe src="https://makai-nutri.web.app" width="900" height="450" frameborder="0" style="border:0" allowfullscreen></iframe><br>
+<iframe src="https://makainutri.neocities.org/" width="900" height="450" frameborder="0" style="border:0" allowfullscreen></iframe><br>
+<iframe src="https://makaisuplementosalimentares.gitlab.io/Suplementos-e-Vitaminas" width="900" height="450" frameborder="0" style="border:0" allowfullscreen></iframe><br>
 LINKS CLOUD:
 <p>
 <a href="https://storage.googleapis.com/makai-nutri/index.html">Google Cloud</a><br>
 <a href="https://makai.blob.core.windows.net/makainutri/index.html">Microsoft Azure</a><br>
 <a href="https://makainutri.xyz/index.html">Ali Cloud</a><br>
-<a href="http://makainutri.com.br.s3-website-sa-east-1.amazonaws.com/">Amazon AWS</a></p><br>
+<a href="http://makainutri.com.br.s3-website-sa-east-1.amazonaws.com/">Amazon AWS</a><br>
+<a href="https://bitbucket.org/makainutri/suplementos-e-vitaminas/src/master/">Bitbucket</a><br>
+<a href="https://makai-nutri.netlify.app/">Netlify</a><br>
+<a href="https://makainutri.github.io/suplementos-e-vitaminas/">Github Pages</a><br>
+<a href="https://github.com/makainutri/suplementos-e-vitaminas">Github Bucket</a><br>
+<a href="https://github.com/makainutri">Github Perfil</a><br>
+<a href="https://makaisuplementosalimentares.gitlab.io/Suplementos-e-Vitaminas/">Gitlab Page</a><br>
+<a href="https://gitlab.com/makaisuplementosalimentares">Gitlab Perfil</a><br>
+<a href="https://makaisuplementosalimentares.gitlab.io/Suplementos-e-Vitaminas">Gitlab Page</a><br>
+<a href="https://github.com/makainutri">Github Perfil</a><br>
+
+
+
 
 <h3>Makai Nutri no Bing</h3>
 <script type="text/javascript">
